# clipmd

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLIPPING-TRIAGE-TARGET.md  Makefile  README.md  SPEC-AUTOMATED-TRIAGE.md  SPEC.md  TODO.md  example-config.yaml  pyproject.toml
.claude/: AUTONOMOUS_WORKFLOW.md  settings.json  settings.local.json  validate-before-push.sh
.github/workflows/: ci.yml
src/clipmd/: __init__.py  cli.py  config.py  context.py  exceptions.py
src/clipmd/commands/: __init__.py  duplicates.py  extract.py  fetch.py  init.py  move.py  preprocess.py  stats.py  trash.py  triage.py  validate.py
src/clipmd/core/: __init__.py  cache.py  dates.py  discovery.py  duplicates.py  extractor.py  fetcher.py  filepath_utils.py  formatters.py  frontmatter.py  hasher.py  initializer.py  mover.py  preprocessor.py  rss.py  rules.py  sanitizer.py  stats.py  trash.py  triager.py  url_utils.py  validator.py
tests/: __init__.py  conftest.py
tests/cli/: __init__.py  test_cli.py  test_duplicates_cmd.py  test_extract_cmd.py  test_fetch_cmd.py  test_init_cmd.py  test_move_cmd.py  test_preprocess_cmd.py  test_stats_cmd.py  test_trash_cmd.py  test_triage_cmd.py  test_validate_cmd.py
tests/fixtures/sample-vault/: 20240110-no-date-prefix-article.md  20240115-Duplicate-Article.md  20240115-Sample-Article.md  20240116-Article-With-Issues.md  20240117-No-Frontmatter-Date.md  20240118-Wikilink-Issue.md  config.yaml  no-date-prefix-article.md
tests/fixtures/sample-vault/.clipmd/: cache.json
tests/fixtures/sample-vault/AI-Tools/: 20240110-Claude-API-Guide.md
tests/fixtures/sample-vault/Science/: 20240112-Space-Discovery.md
tests/integration/: __init__.py
tests/unit/: __init__.py  test_cache.py  test_config.py  test_dates.py  test_discovery.py  test_fetcher.py  test_frontmatter.py  test_hasher.py  test_mover.py  test_rules.py  test_sanitizer.py  test_triager.py
